# ready-agent-cog

./: .gitignore  BUILD.bazel  Cargo.toml  README.md  pyproject.toml
.github/workflows/: python.yml
benches/: hanoi_stress.rs
docs/: onboarding.md
python/ready_agent/: __init__.py  __main__.py
python/tests/: conftest.py  test_cli_basic.py  test_inspect.py  test_python_entry.py  test_run.py  test_tools.py
src/: error.rs  error_tests.rs  lib.rs  main.rs  plan_format.rs  test_helpers.rs
src/execution/: evaluator.rs  evaluator_tests.rs  interpreter.rs  interpreter_tests.rs  mod.rs  navigator.rs  navigator_tests.rs  observer.rs  observer_tests.rs  state.rs  state_context_tests.rs  state_tests.rs
src/llm/: client.rs  mod.rs  traits.rs
src/plan/: diagnostics.rs  expression.rs  mod.rs  queries.rs  step.rs  tests.rs  types.rs
src/planning/: mod.rs
src/planning/parser/: conditions.rs  expressions.rs  functions.rs  literals.rs  mod.rs  names.rs  statements.rs  tests.rs
src/planning/validator/: expressions.rs  mod.rs  outputs.rs  symbols.rs  tests.rs  tool_refs.rs
src/tools/: builtin.rs  builtin_tests.rs  mod.rs  models.rs  models_tests.rs  process.rs  process_tests.rs  shell.rs  shell_tests.rs  traits.rs
src/tools/registry/: mod.rs  runtime.rs  tests.rs
src/workflow/: executor.rs  executor_tests.rs  mod.rs  planner.rs  planner_tests.rs
tests/: cli_recovery_tests.rs  process_cli_registration.rs  test_hanoi_stress.rs
